# aphelion-rs

./: .gitlab-ci.yml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MILESTONES.md  Nix_Development_Environment_Guide.md  OPERATIONS.md  README.md  REQUIREMENTS.md  SECURITY_TIERS.md  entry-script-docs.md  entry-script.sh  project-plan.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/config/: mod.rs
src/database/: mod.rs
src/debian/: mod.rs
src/network/: mod.rs
src/package/: mod.rs
src/utils/: mod.rs
tests/: integration_tests.rs
