[package]
name = "aphelion"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Zervas"]
description = "A modern, optimized, and user-friendly Linux package manager written in Rust"
repository = "https://github.com/tzervas/aphelion-rs"
license = "MIT"
readme = "README.md"
keywords = ["package-manager", "linux", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"
