[package]
name = "aphelion"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Zervas"]
description = "A modern, optimized, and user-friendly Linux package manager written in Rust"
repository = "https://github.com/tzervas/aphelion-rs"
license = "MIT"
readme = "README.md"
keywords = ["package-manager", "linux", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
# tokio = { version = "1.42", features = ["full"] }  # Uncomment when async functionality is needed
# serde = { version = "1.0", features = ["derive"] }  # Uncomment when serialization is needed
# serde_json = "1.0"  # Uncomment when JSON support is needed

[dev-dependencies]
tempfile = "3.14"
