[package]
name = "aphelion-rs"
version = "0.1.0"
edition = "2018"
authors = ["Tyler Zervas <albedo.black.1@gmail.com>"]
description = "A modern, optimized Linux package manager focusing initially on Debian and Ubuntu compatibility."
license = "MIT"
repository = "https://github.com/tzervas/aphelion-rs"

[dependencies]
tokio = { version = "1", optional = true }
structopt = { version = "0.3", optional = true }
env_logger = "0.10.0"
async-std = "1.10.0"
clap = "4.4.6"
reqwest = { version = "0.11", optional = true }
serde = "1.0"
serde_json = "1"
sqlite = { version = "0.31.1", optional = true }
log = "0.4"
tui = "0.19.0"
crossterm = "0.27"

[dev-dependencies]
tokio = "1.0"
tokio-test = "0.4"
assert_cmd = "2"
tempfile = "3"

[features]
default = ["cli", "networking", "database"]
cli = ["structopt"]
networking = ["reqwest", "tokio"]
database = ["sqlite"]
